<resources>
    <string name="app_name">“DisneyCodeChallenge_WayneKellman”</string>
    <string name="select_guest">Select Guest</string>
    <string name="have_reservations">These Guests Have Reservations</string>
    <string name="need_reservations">These Guests Need Reservations</string>
    <string name="info_dump">At least one Guest in the party must have a reservation. Guests without reservations must remain in the same booking party in order to enter.</string>
    <string name="res_needed_title">Reservation Needed</string>
    <string name="res_needed">Select at least one Guest that has \na reservation to continue.</string>
</resources>
