<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="51dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/chevron"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_lts_td_black"
                    android:text="@string/select_guest"
                    android:textColor="#FF00233C"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nest_scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="80dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/has_res"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_lts_td_black"
                    android:paddingStart="16dp"
                    android:paddingTop="20dp"
                    android:paddingBottom="10dp"
                    android:text="@string/have_reservations"
                    android:textColor="#FF00233C"
                    android:textSize="18sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/have_rec"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:itemCount="2"
                    tools:listitem="@layout/guest_item" />

                <TextView
                    android:id="@+id/need_res"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_lts_td_black"
                    android:paddingStart="16dp"
                    android:paddingTop="20dp"
                    android:paddingBottom="10dp"
                    android:text="@string/need_reservations"
                    android:textColor="#FF00233C"
                    android:textSize="18sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/need_rec"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:itemCount="2"
                    tools:listitem="@layout/guest_item" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="6dp"
                        android:src="@drawable/ic_baseline_info_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/avenir_lts_td_black"
                        android:text="@string/info_dump"
                        android:textColor="#FF00233C"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

    <Button
        android:id="@+id/continue_button"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="34dp"
        android:background="@drawable/button_selector"
        android:enabled="false"
        android:text="Continue"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/need_res_popup"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#00233C"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/popup_cancel"
            android:layout_width="41dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_baseline_cancel_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/res_pop_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00233C"
                android:fontFamily="@font/avenir_lts_td_black"
                android:text="@string/res_needed_title"
                android:textColor="#FFF" />

            <TextView
                android:id="@+id/res_pop_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00233C"
                android:text="@string/res_needed"
                android:textColor="#FFF" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>